--- a/fyb/package.yaml
+++ b/fyb/package.yaml
@@ -74,7 +74,7 @@ tests:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
-      # - -threaded
+      - -threaded
       - -rtsopts
       - -with-rtsopts=-xp
       # - -with-rtsopts=-N
