--- a/fyb/stack.yaml
+++ b/fyb/stack.yaml
@@ -1,5 +1,5 @@
-resolver: nightly-2022-11-07
-compiler: ghc-9.2.4
+resolver: lts-18.28 #nightly-2022-11-07
+compiler: ghc-8.10.7 #ghc-9.2.4
 
 packages:
 - .
@@ -9,7 +9,7 @@ ghc-options:
 
 extra-deps:
   - git: https://github.com/hasktorch/hasktorch.git
-    commit: 7113cde5ac1de66755ada7a1eb4cd2cd0cd25e5f
+    commit: d77e48c6ab7b356c0ad480f00b9092cb49f5a37f # 7113cde5ac1de66755ada7a1eb4cd2cd0cd25e5f
     subdirs:
       - hasktorch
       - libtorch-ffi
@@ -25,6 +25,9 @@ extra-deps:
   - indexed-extras-0.2@sha256:e7e498023e33016fe45467dfee3c1379862e7e6654a806a965958fa1adc00304,1349
   - term-rewriting-0.4.0.2@sha256:5412f6aa29c5756634ee30e8df923c83ab9f012a4b8797c460af3d7078466764,2740
   - union-find-array-0.1.0.3@sha256:242e066ec516d61f262947e5794edc7bbc11fd538a0415c03ac0c01b028cfa8a,1372
+  - moo-1.2@sha256:0c4be1a01548db785dcbbe6b8c98579dbf03c5b3b536e0420dce3ba6a61337cb,5951
+  - gray-code-0.3.1@sha256:2c8a4ed9c9ee37320305610604d6d93504e0813d7c9768949af418b53043185a,2388
+  - normaldistribution-1.1.0.3@sha256:2615b784c4112cbf6ffa0e2b55b76790290a9b9dff18a05d8c89aa374b213477,2160
     # - ihaskell-hvega-0.3.2.0@sha256:57b749f3c14b224af6f9484b2cd531299dd740477aa6e6f300f19a8c291b5fac,1182
     # - KMP-0.2.0.0@sha256:6dfbac03ef00ebd9347234732cb86a40f62ab5a80c0cc6bedb8eb51766f7df28,2562
     # - command-0.1.1@sha256:5232b98c195bc3b8a6f35c55ccd2fa424abe355ca54cfcd836bbe7e494834773,1110
